# gridstraint

./: .gitignore  README.md  docker-compose.yml
broker/: Dockerfile
gridsolver/: Dockerfile  pom.xml
gridsolver/src/main/java/com/github/jakubdob/gridsolver/: GridSolverApplication.java
gridsolver/src/main/resources/: application-docker.properties  application.properties
gridsolver/src/main/ui/: angular.json  package-lock.json  package.json
gridsolver/src/main/ui/src/: index.html
gridsolver/src/main/ui/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
gridsolver/src/main/ui/src/app/components/canvas-grid/: canvas-grid.component.html  canvas-grid.component.scss  canvas-grid.component.ts
gridsolver/src/main/ui/src/app/ds/: PriorityQueue.ts
gridsolver/src/main/ui/src/app/interceptors/: cookie.interceptor.ts
gridsolver/src/main/ui/src/app/interfaces/: grid-cell.model.ts  solver-model.ts
gridsolver/src/main/ui/src/app/interfaces/events/: grid-events.ts
gridsolver/src/main/ui/src/app/services/solver/: solver-api.service.ts  (+1 more)
solver-service/: Dockerfile  connect.json
solver-service/SolverService/: CMakeLists.txt
solver-service/SolverService/src/: CMakeLists.txt  main.cpp
solver-service/SolverService/src/messaging/: CMakeLists.txt  ProtonClient.cpp  ProtonClient.h  ProtonReceiver.cpp  ProtonReceiver.h  ProtonSender.cpp  ProtonSender.h
solver-service/SolverService/src/solver/: CMakeLists.txt  SolverExecutor.cpp  SolverExecutor.h  SolverInput.cpp  SolverInput.h  SolverOutput.cpp  SolverOutput.h
(+45 files in other folders)
